test/logicShortCircuit8.slq

def main(){
	x:=H(0:ğ”¹);
	y:=H(0:ğ”¹);
	z:=x && measure(dup(y)); /// error
	w:=y || measure(dup(x)); /// error
	return (x,y,w,z);
}
